--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.19.0",
+def allureVersion = "2.20.0",
     assertJVersion = "3.23.1",
-    slf4jVersion = "1.7.32"
+    slf4jVersion = "2.0.5"
 
 allure {
     report {
@@ -28,6 +28,8 @@ allure {
 
 dependencies {
     testImplementation(
+            "com.codeborne:selenide:6.10.1",
+            "com.github.javafaker:javafaker:1.0.2",
             "io.rest-assured:rest-assured:5.3.0",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "com.fasterxml.jackson.core:jackson-databind:2.14.1",
